fixed bug shadows on currency icons on iphone

--- a/style.css
+++ b/style.css
@@ -304,17 +304,17 @@ span {
   @keyframes add-pulse-black {
     0% {
       transform: scale(0.9);
-      /* box-shadow: 0 0 0 0 rgb(107, 128, 104, 1); */
+      box-shadow: 0 0 0 0 none;
     }
 
     70% {
       transform: scale(1);
-      /* box-shadow: 0 0 0 8px rgba(0, 0, 0, 0); */
+      box-shadow: 0 0 0 0 none;
     }
 
     100% {
       transform: scale(0.9);
-      /* box-shadow: 0 0 0 0 rgba(0, 0, 0, 0); */
+      box-shadow: 0 0 0 0 none;
     }
   }
 }
